# Odyssey

./: Readme.md
FastAPI/app/: main.py
ML/: intro.md
ML/Applying-ML/: Debugging.md  ML_dev-process.md  Model_Evaluation_and_Selection.ipynb  bias-variance.md
ML/Decision-Tree/: Decision_Trees.ipynb  Tree_Ensemble.ipynb  index.md
ML/Neural-networks/: Backprop.ipynb  Backpropagation.md  CoffeeRoasting_TF.ipynb  Derivatives.ipynb  Multiclass_TF.ipynb  Multiclass_classification.md  Neural_network_training.md  Neurons_and_Layers.ipynb  Relu.ipynb  SoftMax.ipynb  index.md
ML/Polynimial-regression/: index.md
ML/Unsupervised-learning/: Anamoly-detection.md  clustering.md
ML/assignments/: Anomaly_Detection.ipynb  C2_W1_Assignment.ipynb  C2_W2_MultiClass.ipynb  C2_W3_Assignment.ipynb  C3_W2_RecSysNN_Assignment.ipynb  C3_W3_A1_Assignment.ipynb  Collaborative_RecSys_Assignment.ipynb  Decision_Tree.ipynb  KMeans_Assignment.ipynb  Linear_Regression.ipynb  Logistic_Regression.ipynb
ML/classification/: Classification_Soln.ipynb  Cost_Function.ipynb  Gradient_Descent.ipynb  index.md
ML/gadient-descent/: index.md
ML/intro/: intro.md
ML/linear-regression/: intro.md
ML/multiple-linear-regression/: Multiple_Variable_Regess.ipynb  Python_Numpy_Vectorization.ipynb  intro.md
linear-algebra/: matrix.md  vectors.md
probability/: index.md
pydantic/: README.md  pyproject.toml
pydantic/models/: 01basic.py  02typing.py  03validator.py
python/: Readme.md  basics.py  decorators.py  interview.md  module.py  pydatic.py
python/numpy/: intro.ipynb  (+2 more)
statistics/: basic.md
(+56 files in other folders)
