[project]
name = "pydantic-tutorial"
version = "0.1.0"
description = "A fast web framework for Python"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.136.1",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.0",
    "python-dotenv>=1.2.2",
    "uvicorn>=0.46.0",
]
